@@ -186,25 +186,25 @@ AC_ARG_WITH(nmapfe, AC_HELP_STRING([--without-nmapfe], [Skip nmapfe X-window GUI
 AC_SUBST(TARGETNMAPFE)
 AC_SUBST(INSTALLNMAPFE)
 
-# Do they want UMIT?
-BUILDUMIT=build-umit
-INSTALLUMIT=install-umit
-UMIT_CLEAN=umit_clean
-UMIT_DIST_CLEAN=umit_dist_clean
-AC_ARG_WITH(umit, AC_HELP_STRING([--without-umit], [Skip installation of the UMIT graphical frontend]),
- [ case "$with_umit" in
+# Do they want Zenmap?
+BUILDZENMAP=build-zenmap
+INSTALLZENMAP=install-zenmap
+ZENMAP_CLEAN=zenmap_clean
+ZENMAP_DIST_CLEAN=zenmap_dist_clean
+AC_ARG_WITH(zenmap, AC_HELP_STRING([--without-zenmap], [Skip installation of the Zenmap graphical frontend]),
+ [ case "$with_zenmap" in
    no)
-    BUILDUMIT=""
-    INSTALLUMIT=""
-    UMIT_CLEAN=""
-    UMIT_DIST_CLEAN=""
+    BUILDZENMAP=""
+    INSTALLZENMAP=""
+    ZENMAP_CLEAN=""
+    ZENMAP_DIST_CLEAN=""
     ;;
    esac]
 )
-AC_SUBST(BUILDUMIT)
-AC_SUBST(INSTALLUMIT)
-AC_SUBST(UMIT_CLEAN)
-AC_SUBST(UMIT_DIST_CLEAN)
+AC_SUBST(BUILDZENMAP)
+AC_SUBST(INSTALLZENMAP)
+AC_SUBST(ZENMAP_CLEAN)
+AC_SUBST(ZENMAP_DIST_CLEAN)
 
 
 # We test whether they specified openssl desires explicitly
